Fix mobile overflow

--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -288,6 +288,7 @@ body
 
 .wy-nav-top
   display: none
+  width: 100%
   margin-left: $nav-desktop-width
   background: $link-color
   color: $white
@@ -319,6 +320,7 @@ body
   background: $section-background-color
   padding: $gutter ($gutter * 2)
   height: 100%
+  width: 100%
   max-width: $nav-content-width
   min-height: 100%
 
